Fix contrast

--- a/src/guilded/channels/applications.sass
+++ b/src/guilded/channels/applications.sass
@@ -13,6 +13,7 @@
 
 // Application selector wrapper
 .TeamApplicationInlineLink-container
+    border: solid 1px $border-dark-1
     background-color: $bg-2
 
 /*
@@ -57,6 +58,7 @@
 // Application
 .ApplicantDisplayItem-container
     background-color: $bg-2
+    border: solid 1px $border-dark-1
     // Hover
     &-desktop::after
         background-color: $bg-hover
