--- a/src/guilded/channels/voice.sass
+++ b/src/guilded/channels/voice.sass
@@ -172,7 +172,7 @@
     &-container-type-gilded
         // Background
         .RangeSlider-rail
-            background-color: $bg-4
+            background-color: $bg-0
         // Current volume
         .RangeSlider-selected-rail
             background: $progress
