--- a/src/guilded/layouts/app.sass
+++ b/src/guilded/layouts/app.sass
@@ -114,8 +114,8 @@
 .SearchBarV2-container-unfocused::after,
 .SearchBarV2-container
     border-radius: 10px
-    background-color: $bg-3
-    border-color: $border-dark-1
+    background-color: $shading-1
+    border-color: $border-light-1
 // Search focused
 .SearchBarV2-container-unfocused::after
     background-color: $bg-hover
